fix: broken layout

--- a/assets/css/components/report/simple/print.scss
+++ b/assets/css/components/report/simple/print.scss
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.easy-container {
+.referee-report {
   height: min-content !important;
 }
 
